refactor: remove part of unnecessary code linked to class Position